# lfs167-intro-to-jenkins

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  pages.py
app/static/: styles.css
app/templates/: _navigation.html  base.html
docs/: jenkins-docker-installation.md  working-with-flask.md  working-with-uv.md
