[project]
name = "intro-to-jenkins"
version = "0.0.1"
description = "Curso de introducción a Jenkins"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.1.0",
]
authors = [
  {name = "Jesus Oviedo Riquelme", email = "j92riquelme@gmail.com.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
